# LangChain--Agentic-AI

./: LangChain--Agentic-AI-Engineering-with-LangChain-LangGraph.code-workspace  README.md  Test_ollama.py  gen.py  main.py  pyproject.toml
.box/: pyvenv.cfg
