[project]
name = "langchain-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.14",
    "langchain-core>=1.2.23",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langchain-openapi>=0.1.1",
    "langgraph>=1.1.4",
    "python-dotenv>=1.2.2",
]
